karavan-demo/deprecated/openshift/apps/karavan/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: 
  labels:
    app: karavan
    app.kubernetes.io/component: karavan
    app.kubernetes.io/instance: karavan
    app.kubernetes.io/name: karavan
    app.kubernetes.io/part-of: karavan
  name: karavan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: karavan
  template:
    metadata:
      labels:
        app: karavan
    spec:
      containers:
      - name: karavan
        imagePullPolicy: Always
        image: ghcr.io/apache/camel-karavan:latest
        livenessProbe:
          failureThreshold: 30
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        readinessProbe:
          failureThreshold: 30
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
